--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "postcss": "^8.4.12",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-tsparticles": "^1.43.1",
+    "react-typing-effect": "^2.0.5",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
