--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-ga": "^3.3.1",
+    "react-icons": "^4.8.0",
     "react-tsparticles": "^1.43.1",
     "react-typing-effect": "^2.0.5",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.4"
   }
