--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "request-ip": "^3.3.0"
   }
 }
